
syntax = "proto3";
option go_package = "github.com/olympus-protocol/ogen/chainrpc/proto";

import "chainrpc/proto/common.proto";

service Chain {

    /** 
        Method: GetChainInfo 
        Input: Empty
        Response: message ChainInfoResponse
        Description: Returns the current chain information.
    */

    rpc GetChainInfo(Empty) returns (ChainInfo) {}

    /** 
        Method: GetRawBlock 
        Input: message BlockHash
        Response: message GetBlockRawResponse
        Description: Returns the raw block from a block hash.
    */

    rpc GetRawBlock(Hash) returns (RawData) {}

    /** 
        Method: GetBlock 
        Input: message BlockHash
        Response: message GetBlockResponse
        Description: Returns the human readable block information from a block hash.
    */

    rpc GetBlock(Hash) returns (Block) {}

    /** 
        Method: GetBlockHash 
        Input: message BlockHeight
        Response: message GetBlockHashResponse
        Description: Returns the hash string of the block at specified height
    */

    rpc GetBlockHash(Height) returns (Hash) {}

     /** 
        Method: GetAccount 
        Input: message Account
        Response: message AccountInfo
        Description: Returns the current account information
    */

    rpc GetAccount(Account) returns (AccountInfo) {}

    /** 
        Method: Sync 
        Input: message SyncInfo
        Response: message SyncStreamResponse
        Description: Returns a stream of raw blocks from the block hash specified
    */

    rpc Sync(Hash) returns (stream RawData) {}

    /** 
        Method: SubscribeBlocks 
        Input: message BlockSubscribe
        Response: message BlockWithEpoch
        Description: Returns a stream to notify when new blocks arrive
    */

    rpc SubscribeBlocks(BlockSubscribe) returns (stream BlockWithEpoch) {}

    /** 
        Method: SubscribeAccounts 
        Input: message AccountsSubscribe
        Response: message Account
        Description: Returns a stream notify when the specified account is modified
    */

    rpc SubscribeAccounts(Account) returns (stream AccountInfo) {}

    
}

message ChainInfo {
    string block_hash = 1;
    uint64 block_height = 2;
    uint64 validators = 3;
}

message BlockSubscribe {
    bool include_epochs = 1;
}

message BlockWithEpoch {
    string raw_block = 1;
    string epoch_transitions = 2;
}

message AccountInfo {
    string account = 1;
    string balance = 2;
    string nonce = 3;
    repeated string txs = 4;
}




